--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,11 +6,11 @@ build:
     python: "3.11"
 
 sphinx:
-  configuration: docs\conf.py
+  configuration: docs/conf.py
 
 formats:
   - pdf
 
 python:
   install:
-    - requirements: docs\requirements.txt
+    - requirements: docs/requirements.txt
